--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ node_modules
 .idea
 img/forward+.gif
 img/gbuffer.gif
+img/20211102032411.jpg
+img/20211102032557.jpg
+img/20211102032719.jpg
+img/forward+2.gif
+img/forward+3.gif
+img/g+3.gif
